# uhn

./: README.md
dev-uhd-dpdk/: .gitignore  CMakeLists.txt  README-DPDK-INFRA.md  README.md
dev-uhd-dpdk/cmake/: test_dpdk_infra.cpp
dev-uhd-dpdk/cmake/dpdk-infra/: CMakeLists.txt  README_TESTCASES.md  SIMPLE_TEST_README.md  test_dpdk_infra.cpp  testcase_interconnect_dpdk_infra.cpp  testcase_primary_dpdk_infra.cpp  testcase_primary_ue_loopback.cpp  testcase_secondary_dpdk_infra.cpp  testcase_traffic_switch.cpp
dev-uhd-dpdk/conf/: configurations-gnb.yaml  configurations-ue.yaml  configurations-unified.yaml  configurations.yaml
dev-uhd-dpdk/include/conf/: config_params.hpp
dev-uhd-dpdk/include/device/: flexsdr_client_impl.h  flexsdr_device.hpp  flexsdr_rx_streamer.hpp  flexsdr_tx_streamer.hpp  log_compat.hpp
dev-uhd-dpdk/include/runtime/: affinity.hpp
dev-uhd-dpdk/include/transport/: dpdk_common.hpp  eal_bootstrap.hpp  flexsdr_primary.hpp  flexsdr_secondary.hpp
dev-uhd-dpdk/include/workers/: channel_fifo.hpp  rx_worker.hpp  tx_worker.hpp
dev-uhd-dpdk/proto/: README.md  flexsdr.proto
dev-uhd-dpdk/src/conf/: config_params.cpp  config_parms.cpp
dev-uhd-dpdk/src/device/: flexsdr_device.cpp  flexsdr_rx_streamer.cpp  flexsdr_tx_streamer.cpp  registry.cpp
dev-uhd-dpdk/src/device/grpc_client/: flexsdr_client_impl.cpp
dev-uhd-dpdk/src/generated_proto/: flexsdr.grpc.pb.cc  flexsdr.grpc.pb.h  flexsdr.pb.cc  flexsdr.pb.h
dev-uhd-dpdk/src/runtime/: affinity.cpp
dev-uhd-dpdk/src/transport/: eal_bootstrap.cpp  flexsdr_primary.cpp  flexsdr_secondary.cpp
dev-uhd-dpdk/src/workers/: rx_worker.cpp  tx_worker.cpp
dev-uhd-dpdk/test/: CMakeLists.txt  common_lib.h  flexsdr_lib.cpp  test_dpdk_infra.cpp  test_dpdk_primary_only.cpp  test_flexsdr_factory.cpp  test_flexsdr_lib.cpp
